--- a/aws/playbooks/upload.yml
+++ b/aws/playbooks/upload.yml
@@ -10,6 +10,7 @@
     project_root: "{{ playbook_dir | realpath }}/../.."
     frontend_dir: "{{ project_root }}/frontend"
     build_dir: "{{ frontend_dir }}/dist"
+    cloudfront_distribution_id: E2H71L1QW3AJQM
   tasks:
     - name: Install Node dependencies (clean, reproducible)
       community.general.npm:
@@ -69,3 +70,17 @@
           index.html
         delete: false
       register: sync_misc
+    - name: Create CloudFront invalidation
+      community.aws.cloudfront_invalidation:
+        region: "{{ AWS_REGION }}"
+        aws_access_key: "{{ AWS_ACCESS_KEY_ID }}"
+        aws_secret_key: "{{ AWS_SECRET_ACCESS_KEY }}"
+        distribution_id: "{{ cloudfront_distribution_id }}"
+        target_paths:
+          - "/*"
+        caller_reference: "{{ lookup('pipe', 'date +%s') }}"
+      register: invalidation_result
+
+    - name: Display invalidation ID
+      ansible.builtin.debug:
+        msg: "Invalidation created with ID: {{ invalidation_result.invalidation.id }}"
