--- a/azure/playbooks/deploy-cdn.yml
+++ b/azure/playbooks/deploy-cdn.yml
@@ -9,6 +9,7 @@
     location_global: global
     storage_account_name: andrewbrowncrc2025
     domain_fqdn: "www.andrewbrownresume.net"
+    apex_fqdn: "andrewbrownresume.net"
     dns_zone_name: "andrewbrownresume.net"
     dns_zone_rg: "cloud-resume-challenge"
 
@@ -54,6 +55,7 @@
                     domain_fqdn={{ domain_fqdn }}
                     dns_zone_name={{ dns_zone_name }}
                     dns_zone_rg={{ dns_zone_rg }}
+                    apex_fqdn={{ apex_fqdn }}
         --output json
       changed_when: false
 
@@ -67,6 +69,7 @@
                     domain_fqdn={{ domain_fqdn }}
                     dns_zone_name={{ dns_zone_name }}
                     dns_zone_rg={{ dns_zone_rg }}
+                    apex_fqdn={{ apex_fqdn }}
         --output json
       register: afd_deploy
       changed_when: afd_deploy.rc == 0
