--- a/frontend/.env.aws
+++ b/frontend/.env.aws
@@ -1,1 +1,1 @@
-VITE_COUNTER_ENDPOINT=https://api-counter.andrewbrownresume.com
+VITE_COUNTER_ENDPOINT=https://api-counter.andrewbrownresume.com/counter
