--- a/frontend/.env.azure
+++ b/frontend/.env.azure
@@ -1,1 +1,1 @@
-VITE_COUNTER_ENDPOINT=https://api.andrewbrownresume.net
+VITE_COUNTER_ENDPOINT=https://viewcounterapp.azurewebsites.net/api/view_counter
