--- a/frontend/.env.gcp
+++ b/frontend/.env.gcp
@@ -1,1 +1,1 @@
-VITE_COUNTER_ENDPOINT=https://api.andrewbrownresume.org
+VITE_COUNTER_ENDPOINT=https://us-east1-cloud-resume-challenge-475514.cloudfunctions.net/viewcounter
