--- a/gcp/playbooks/upload.yml
+++ b/gcp/playbooks/upload.yml
@@ -14,7 +14,8 @@
     frontend_dir: "{{ project_root }}/frontend"
     build_dir: "{{ frontend_dir }}/dist"
     sa_key_path: "{{ lookup('ansible.builtin.tempfile', state='file', suffix='.json') }}"
-
+    cloudflare_api_token: "{{ CLOUDFLARE_API_TOKEN }}"
+    cloudflare_zone_id: "{{ CLOUDFLARE_ZONE_ID }}"
   environment:
     CLOUDSDK_CORE_PROJECT: "{{ gcp_project }}"
 
@@ -40,7 +41,7 @@
         ci: true
 
     - name: Build Vite app
-      ansible.builtin.shell: npm run build
+      ansible.builtin.shell: npm run build_gcp
       args:
         chdir: "{{ frontend_dir }}"
 
@@ -66,4 +67,19 @@
       changed_when: "'Copying' in rsync_out.stdout or 'Removing' in rsync_out.stdout"
       environment:
         GOOGLE_APPLICATION_CREDENTIALS: "{{ sa_key_tmp.path }}"
+    - name: Purge entire Cloudflare cache
+      uri:
+        url: "https://api.cloudflare.com/client/v4/zones/{{ cloudflare_zone_id }}/purge_cache"
+        method: POST
+        headers:
+          Authorization: "Bearer {{ cloudflare_api_token }}"
+          Content-Type: "application/json"
+        body_format: json
+        body:
+          purge_everything: true
+        status_code: 200
+      register: purge_response
 
+    - name: Show purge response
+      debug:
+        var: purge_response.json
